--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -189,6 +189,7 @@
       </div>
 
       <div class="flex-item-staff" id="board">
+
         <hr class="no-margin-bottom">
         <div class="social-media-icons">
           <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
@@ -201,7 +202,8 @@
             </div>
             <p id="board-ada-details">
               Ada Banasik is an environmental engineer with over 9 years of experience in stormwater treatment, remedial design, low-impact development, construction management, and field investigations.
-
+              <br>
+              <br>
               In addition to being a Board Member, Ms. Banasik serves as Red Sweater Project's Programs Director, managing the volunteer and sponsorship programs, and oversees the design and implementation of Mungere's water and sanitation projects. As member of the Portland Professionals Chapter of Engineers Without Borders (EWB), Ms. Banasik was involved in the design and implementation of composting toilets and rainwater harvesting projects in both Ecuador and Tanzania and currently serves as a liason between EWB and Red Sweater Project.
 
             </p>
@@ -210,7 +212,200 @@
             <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-ada-arrow-up")%>
         </div>
 
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Sarah Ford, MPH </h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-sarah-details">
+              Sarah Ford is attracted to the hands-on mission of the Red Sweater Project and its powerful fundraising potential to ultimately change and impact the lives of children in Tanzania. She has traveled extensively to developing countries and brings fundraising and programming knowledge to the Board, with over 13 years of experience in fundraising and network consulting at both the national and international level. Sarah's passion for serving the underpriviledged started at a young age and developed through her studies and work experience, her most recent work having been with Operation Smile, Inc. and ALSAC/St. Jude Children's Research Hospital.
+              <br>
+              <br>
+              Ms. Ford is a graduate of Princeton University (2004) where she received the Community Service Scholarship Award, and received her Masters in Public Health from the Johns Hopkins Bloomberg School of Public Health (2009).
+
+
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-sarah-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-sarah-arrow-up")%>
+        </div>
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/alan.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Ambassador Alan Holmer, JD </h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-alan-details">
+              Alan F. Holmer, age 62, has served as a member of the Board since 2011. He has over 40 years experience in government and the private sector and has been involved with building secondary schools in rural Tanzania for over seven years.  Previously, Holmer has served as Co-Chairman of the President’s Advisory Council on HIV/AIDS, as well as President and CEO of the Pharmaceutical Research and Manufacturers of America (PhRMA), where he led efforts to improve protection of intellectual property around the world.
+              <br>
+              <br>
+              Mr. Holmer has served as a director of multiple for-profit and not-for-profit enterprises in the U.S. and overseas, and has deep experience in strategic planning, organizational direction, and risk management.  He currently serves as the Chairman of the Board of the Metropolitan Washington, D.C. Chapter of the Cystic Fibrosis Foundation, and a Director of Breakthrough Partners, which operates in strategic regions of Africa, Asia and Latin America to identify and build indigenous leaders.
+              <br>
+              <br>
+              Mr. Holmer has significant expertise in handling legal, international trade and governmental issues, having held various positions within the office of the U.S. Trade Representative, the Commerce Department and the White House, including serving as Deputy U.S. Trade Representative with rank of Ambassador.  Holmer also served as a partner at the international law firm, Sidley &amp; Austin (now Sidley Austin LLP), as an associate at Steptoe &amp; Johnson LLP, and as Chief of Staff to Senator Bob Packwood.
+              <br>
+              <br>
+              Mr. Holmer earned his Juris Doctor from the Georgetown University Law Center (1978) and graduated cum laude with an AB from Princeton University (1971). He is the recipient of the Alexander Hamilton Award from the US Treasury and the Yetta Rosenburg Humanitarian Award.
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-alan-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-alan-arrow-up")%>
+        </div>
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/erika.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Erika Bryant, MEd</h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-erika-details">
+              Ms. Bryant is the Executive Director of the Elsie Whitlow Stokes Community Freedom Public Charter School in Washington, DC. A former Peace Corps Volunteer in the Republic of Guinea where she served as a volunteer teacher with TEFL certfication, Erika has extensive experience working in international education with a focus in Africa.
+             <br>
+             <br>
+              Ms. Bryant's diverse professional career includes serving as Policy Associate with the National Youth Employment Coalition and Project Associate for the Council of Chief State School Officers in Washington, DC; Program Officer for Africare in Mali; and consultant to International Education and Training in Chad, working with clients such as UNICEF and the International Finance Corporation. Erika also served as Interim School Director at Mungere Secondary School in 2014.
+            <br>
+            <br>
+              Ms. Bryant received her Bachelor of Arts degree in English from Spelman College (1990) and her Masters in Education from Harvard University (1996) with a concentration in International Education.
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-erika-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-erika-arrow-up")%>
+        </div>
+
       </div>
+
+    </div>
+
+<!-- ADVISORY BOARD -->
+    <div class="flex-item-staff">
+
+      <hr class="no-margin-bottom">
+      <div class="social-media-icons">
+        <h2 class="yellow-text">ADVISORY BOARD</h2>
+        <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-arrow-down")%>
+        <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "advisory-arrow-up")%>
+      </div>
+
+      <div class="flex-item-staff" id="advisory">
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/jenny.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Jenny Barker, MPA</h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="advisory-jenny-details">
+              With years of experience managing programs in education and public health in Tanzania, Jenny Barker brings key skills to the Advisory Board in international development, specifically finance and operations management related to projects targeting girls education, HIV/AIDS and malaria prevention, and water programs throughout Africa.
+              <br>
+              <br>
+              Ms. Barker has held multiple positions at FHI360, first as a Program and Finance Associate for the Ambassador Girls Scholarship Program in Equatorial Guinea, Ethiopia, Rwanda, Somalia, Sudan and Tanzania. As a Program Officer for the Tanzania Marketing and Communications for AIDS (T-MARC) program, she managed and coordinated GIS/GPS monitoring and evaluation efforts to identify and map high-risk locations for HIV transmission and led field pilot visits as well as development of curriculum.
+              <br>
+              <br>
+              Barker also worked with Proctor &amp; Gamble’s Children’s Safe Drinking Water Fund on a PUR clean water program in northern Tanzania.  Currently, Barker serves as Director of the Global FISH Alliance, a USAID-funded program working on sustainable fisheries with the communities who depend on them globally.
+              <br>
+              <br>
+              Ms. Barker received her Masters in Public Administration in International Development Management at George Washington University (2006) and her Bachelor of Arts in Communication Studies from the University of Missouri-Kansas City (1998).
+
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-jenny-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "advisory-jenny-arrow-up")%>
+        </div>
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Sarah Ford, MPH </h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-sarah-details">
+              Sarah Ford is attracted to the hands-on mission of the Red Sweater Project and its powerful fundraising potential to ultimately change and impact the lives of children in Tanzania. She has traveled extensively to developing countries and brings fundraising and programming knowledge to the Board, with over 13 years of experience in fundraising and network consulting at both the national and international level. Sarah's passion for serving the underpriviledged started at a young age and developed through her studies and work experience, her most recent work having been with Operation Smile, Inc. and ALSAC/St. Jude Children's Research Hospital.
+              <br>
+              <br>
+              Ms. Ford is a graduate of Princeton University (2004) where she received the Community Service Scholarship Award, and received her Masters in Public Health from the Johns Hopkins Bloomberg School of Public Health (2009).
+
+
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-sarah-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-sarah-arrow-up")%>
+        </div>
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/alan.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Ambassador Alan Holmer, JD </h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-alan-details">
+              Alan F. Holmer, age 62, has served as a member of the Board since 2011. He has over 40 years experience in government and the private sector and has been involved with building secondary schools in rural Tanzania for over seven years.  Previously, Holmer has served as Co-Chairman of the President’s Advisory Council on HIV/AIDS, as well as President and CEO of the Pharmaceutical Research and Manufacturers of America (PhRMA), where he led efforts to improve protection of intellectual property around the world.
+              <br>
+              <br>
+              Mr. Holmer has served as a director of multiple for-profit and not-for-profit enterprises in the U.S. and overseas, and has deep experience in strategic planning, organizational direction, and risk management.  He currently serves as the Chairman of the Board of the Metropolitan Washington, D.C. Chapter of the Cystic Fibrosis Foundation, and a Director of Breakthrough Partners, which operates in strategic regions of Africa, Asia and Latin America to identify and build indigenous leaders.
+              <br>
+              <br>
+              Mr. Holmer has significant expertise in handling legal, international trade and governmental issues, having held various positions within the office of the U.S. Trade Representative, the Commerce Department and the White House, including serving as Deputy U.S. Trade Representative with rank of Ambassador.  Holmer also served as a partner at the international law firm, Sidley &amp; Austin (now Sidley Austin LLP), as an associate at Steptoe &amp; Johnson LLP, and as Chief of Staff to Senator Bob Packwood.
+              <br>
+              <br>
+              Mr. Holmer earned his Juris Doctor from the Georgetown University Law Center (1978) and graduated cum laude with an AB from Princeton University (1971). He is the recipient of the Alexander Hamilton Award from the US Treasury and the Yetta Rosenburg Humanitarian Award.
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-alan-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-alan-arrow-up")%>
+        </div>
+
+        <hr class="no-margin-bottom">
+        <div class="social-media-icons">
+          <%= image_tag("staff/erika.jpg", :class => "staff-photo")%>
+          <div class="title">
+            <div class="name">
+              <h5 class="no-top-pad">Erika Bryant, MEd</h5>
+              <p><em>
+                Qualifying Skills/Expertise
+              </em></p>
+            </div>
+            <p id="board-erika-details">
+              Ms. Bryant is the Executive Director of the Elsie Whitlow Stokes Community Freedom Public Charter School in Washington, DC. A former Peace Corps Volunteer in the Republic of Guinea where she served as a volunteer teacher with TEFL certfication, Erika has extensive experience working in international education with a focus in Africa.
+             <br>
+             <br>
+              Ms. Bryant's diverse professional career includes serving as Policy Associate with the National Youth Employment Coalition and Project Associate for the Council of Chief State School Officers in Washington, DC; Program Officer for Africare in Mali; and consultant to International Education and Training in Chad, working with clients such as UNICEF and the International Finance Corporation. Erika also served as Interim School Director at Mungere Secondary School in 2014.
+            <br>
+            <br>
+              Ms. Bryant received her Bachelor of Arts degree in English from Spelman College (1990) and her Masters in Education from Harvard University (1996) with a concentration in International Education.
+            </p>
+          </div>
+            <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-erika-arrow-down")%>
+            <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-erika-arrow-up")%>
+        </div>
+
+      </div>
+
     </div>
   </div>
 </div>
@@ -394,6 +589,71 @@ $(document).ready(function() {
     $('#board-ada-details').toggle(700);
     $('#board-ada-arrow-down').show();
     $('#board-ada-arrow-up').hide();
+  });
+
+  $('#board-sarah-arrow-down').click(function(event) {
+    event.preventDefault();
+    $('#board-sarah-details').toggle(700);
+    $('#board-sarah-arrow-down').hide();
+    $('#board-sarah-arrow-up').show();
+  });
+  $('#board-sarah-arrow-up').click(function(event) {
+    event.preventDefault();
+    $('#board-sarah-details').toggle(700);
+    $('#board-sarah-arrow-down').show();
+    $('#board-sarah-arrow-up').hide();
+  });
+
+  $('#board-alan-arrow-down').click(function(event) {
+    event.preventDefault();
+    $('#board-alan-details').toggle(700);
+    $('#board-alan-arrow-down').hide();
+    $('#board-alan-arrow-up').show();
+  });
+  $('#board-alan-arrow-up').click(function(event) {
+    event.preventDefault();
+    $('#board-alan-details').toggle(700);
+    $('#board-alan-arrow-down').show();
+    $('#board-alan-arrow-up').hide();
+  });
+
+  $('#board-erika-arrow-down').click(function(event) {
+    event.preventDefault();
+    $('#board-erika-details').toggle(700);
+    $('#board-erika-arrow-down').hide();
+    $('#board-erika-arrow-up').show();
+  });
+  $('#board-erika-arrow-up').click(function(event) {
+    event.preventDefault();
+    $('#board-erika-details').toggle(700);
+    $('#board-erika-arrow-down').show();
+    $('#board-erika-arrow-up').hide();
+  });
+
+  $('#advisory-jenny-arrow-down').click(function(event) {
+    event.preventDefault();
+    $('#advisory-jenny-details').toggle(700);
+    $('#advisory-jenny-arrow-down').hide();
+    $('#advisory-jenny-arrow-up').show();
+  });
+  $('#advisory-jenny-arrow-up').click(function(event) {
+    event.preventDefault();
+    $('#advisory-jenny-details').toggle(700);
+    $('#advisory-jenny-arrow-down').show();
+    $('#advisory-jenny-arrow-up').hide();
+  });
+
+  $('#advisory-arrow-down').click(function(event) {
+    event.preventDefault();
+    $('#advisory').toggle(700);
+    $('#advisory-arrow-down').hide();
+    $('#advisory-arrow-up').show();
+  });
+  $('#advisory-arrow-up').click(function(event) {
+    event.preventDefault();
+    $('#advisory').toggle(700);
+    $('#advisory-arrow-down').show();
+    $('#advisory-arrow-up').hide();
   });
 
 });
