Make the Our Team page fully responsive

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -550,6 +550,12 @@ body {
     }
   }
 
+  .flex-item-staff {
+    .staff-photo {
+      display: none;
+    }
+  }
+
   .flex-item-1col.intro {
     padding-left: 0;
   }
@@ -616,8 +622,8 @@ body {
     border-radius: 0 0 6px 6px;
   }
   .arrow-down, .arrow-up {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 0;
     margin: 10px 0 auto 10px;
   }
@@ -658,6 +664,14 @@ body {
 
 #staff, #staff-arrow-up, #board, #board-arrow-up, #advisory-arrow-up, #advisory {
   display: none;
+}
+
+#staff-arrow-up, #staff-arrow-down,
+#board-arrow-up, #board-arrow-down,
+#advisory-arrow-up, #advisory-arrow-down
+{
+  width: 30px;
+  height: 30px;
 }
 .no-margin-bottom {
   margin-bottom: 0;
