--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -12,8 +12,8 @@
       <hr class="no-margin-bottom">
       <div class="social-media-icons">
         <h2 class="yellow-text">STAFF</h2>
-        <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "staff-arrow-down")%>
-        <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "staff-arrow-up")%>
+        <%= image_tag("plus.svg", :class => "arrow-down", :id => "staff-arrow-down")%>
+        <%= image_tag("minus.svg", :class => "arrow-down", :id => "staff-arrow-up")%>
 
         </div>
       </div>
@@ -184,8 +184,8 @@
       <hr class="no-margin-bottom">
       <div class="social-media-icons">
         <h2 class="yellow-text">BOARD OF DIRECTORS</h2>
-        <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "board-arrow-down")%>
-        <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "board-arrow-up")%>
+        <%= image_tag("plus.svg", :class => "arrow-down", :id => "board-arrow-down")%>
+        <%= image_tag("minus.svg", :class => "arrow-down", :id => "board-arrow-up")%>
       </div>
 
       <div class="flex-item-staff" id="board">
@@ -296,8 +296,8 @@
       <hr class="no-margin-bottom">
       <div class="social-media-icons">
         <h2 class="yellow-text">ADVISORY BOARD</h2>
-        <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-arrow-down")%>
-        <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "advisory-arrow-up")%>
+        <%= image_tag("plus.svg", :class => "arrow-down", :id => "advisory-arrow-down")%>
+        <%= image_tag("minus.svg", :class => "arrow-down", :id => "advisory-arrow-up")%>
       </div>
 
       <div class="flex-item-staff" id="advisory">
@@ -536,6 +536,7 @@
             <%= image_tag("arrow-down.svg", :class => "arrow-down", :id => "advisory-kimberly-arrow-down")%>
             <%= image_tag("arrow-up.svg", :class => "arrow-down", :id => "advisory-kimberly-arrow-up")%>
         </div>
+
         <hr class="no-margin-bottom">
         <div class="social-media-icons">
           <%= image_tag("staff/frank.jpg", :class => "staff-photo")%>
@@ -633,7 +634,7 @@
   <div class="flex page-canvas">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>WHAT MAKES THE SCHOOL UNIQUE?</h2>
+        <h2>WHAT MAKES THE <br>SCHOOL UNIQUE?</h2>
         <p>
           It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
         </p>
