--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= javascript_include_tag "https://js.stripe.com/v2/", "application" %>
     <title>Red Sweater Project</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
@@ -75,7 +76,7 @@
                   <%= link_to "SPONSOR", students_path %>
   							</li>
                 <li class="">
-                  <a href="#">DONATE</a>
+                  <%= link_to "DONATE", charges_path %>
                 </li>
 
 <!-- REFERENCE CODE
